--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,8 +5,8 @@ html {
 }
 
 body {
-    background-color: #0D0B25;
-    color: #E4237D;
+    background-color: #0d0b25;
+    color: #e52a81;
     font-family: 'Montserrat', Helvetica, Arial, sans-serif;
     font-size: 8vw;
     height: 75vw;
@@ -21,14 +21,12 @@ body h2 {
 }
 
 @media (min-aspect-ratio: 4/3) {
-
     body {
         font-size: 10.666vh;
         height: 100%;
         margin: 0 auto;
         width: 133vh;
     }
-
 }
 
 a {
@@ -66,6 +64,6 @@ li {
 }
 
 .footnote {
-    color: #F8F8F2;
+    color: #f8f8f2;
     font-size: 30%;
 }
